Fix z-index issue

--- a/src/gui.css
+++ b/src/gui.css
@@ -5,6 +5,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+/* Sub-elements of guify-container should appear over anything else. */
+.guify-container > * {
     z-index: 9999;
 }
 
